Comment out unneeded page layouts
Add a new component to show login information on log in page for ease during demonstrations.

--- a/Code/BlazorSpecialProjectFinal/Components/Account/Pages/Login.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Account/Pages/Login.razor
@@ -60,6 +60,7 @@
             <h3>Use another service to log in.</h3>
             <hr />
             <ExternalLoginPicker />
+            <ExampleLoginInfoComponent></ExampleLoginInfoComponent>
         </section>
     </div>
 </div>
