--- a/Code/BlazorSpecialProjectFinal/Components/Layout/NavMenu.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Layout/NavMenu.razor
@@ -17,8 +17,8 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-
-        <div class="nav-item px-3">
+        @* These links are not required for this project*@
+        @*<div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
@@ -29,12 +29,13 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
-
+        
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="auth">
                 <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
             </NavLink>
         </div>
+        *@
 
         <AuthorizeView>
             <Authorized>
