--- a/Code/BlazorSpecialProjectFinal/Components/_Imports.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/_Imports.razor
@@ -9,3 +9,4 @@
 @using Microsoft.JSInterop
 @using BlazorSpecialProjectFinal
 @using BlazorSpecialProjectFinal.Components
+@using BlazorSpecialProjectFinal.Components.Pages
