--- a/Code/BlazorSpecialProjectFinal/Components/Pages/Home.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Pages/Home.razor
@@ -6,3 +6,23 @@
 
 No items are actually for sale.  This is a demonstration of using Blazor and databases.  All items listed for sale are from 
 <a href="https://harrypotter.fandom.com/wiki/Honeydukes#Sweets_sold">Harry Potter Fandom</a>.
+
+<AuthorizeView>
+    <br />
+    @*show current username*@
+    Hello @context.User.Identity?.Name!
+
+    <br />
+    <br />
+    @*display claims that exist for the user*@
+    @if (@context.User.Claims is not null)
+    {
+        <ul>
+            @foreach(var claim in context.User.Claims)
+            {
+                <li>@claim.Type : @claim.Value</li>
+            }
+        </ul>
+    }
+    <br />
+</AuthorizeView>
