Set up authorization for nav links

--- a/Code/BlazorSpecialProjectFinal/Components/Pages/Home.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Pages/Home.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Welcome to Hogsmead's HoneyDukes Online Ordering for Muggles!'</h1>
+<h1>Welcome to Hogsmead's Honeydukes Online Ordering for Muggles!'</h1>
 
 No items are actually for sale.  This is a demonstration of using Blazor and databases.  All items listed for sale are from 
 <a href="https://harrypotter.fandom.com/wiki/Honeydukes#Sweets_sold">Harry Potter Fandom</a>.
