--- a/Code/BlazorSpecialProjectFinal/Components/Layout/NavMenu.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Layout/NavMenu.razor
@@ -37,7 +37,7 @@
         </div>
         *@
 
-        <AuthorizeView>
+        <AuthorizeView Policy="Admin">
             <Authorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="Account/Manage">
