Set up QuickGrid
Set up quick grid in repeatable component to show inventory.

--- a/Code/BlazorSpecialProjectFinal/Components/Pages/OrderProducts.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Pages/OrderProducts.razor
@@ -1,6 +1,11 @@
 ﻿@page "/orderProducts"
 
-<h3>OrderProducts</h3>
+[Authorize(Policy = "Regular")]
+
+<h3>Order Products</h3>
+
+<ProductsComponent></ProductsComponent>
+
 
 @code {
 
