--- a/Code/BlazorSpecialProjectFinal/Components/_Imports.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/_Imports.razor
@@ -10,3 +10,5 @@
 @using BlazorSpecialProjectFinal
 @using BlazorSpecialProjectFinal.Components
 @using BlazorSpecialProjectFinal.Components.Pages
+@using BlazorSpecialProjectFinal.Data
+@using BlazorSpecialProjectFinal.Components.Controls
