--- a/Code/BlazorSpecialProjectFinal/Components/Layout/NavMenu.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Layout/NavMenu.razor
@@ -67,11 +67,11 @@
                         <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> Purchase History
                     </NavLink>
                 </div>
-            <div class="nav-item px-3">
+            @*<div class="nav-item px-3">
                 <NavLink class="nav-link" href="Account/Manage">
                     <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> @context.User.Identity?.Name
                 </NavLink>
-            </div>
+            </div>*@
             <div class="nav-item px-3">
                 <form action="Account/Logout" method="post">
                     <AntiforgeryToken />
