--- a/Code/BlazorSpecialProjectFinal/Components/Controls/ProductsComponent.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Controls/ProductsComponent.razor
@@ -1,23 +1,10 @@
-﻿@using BlazorSpecialProjectFinal.Objects
-@using BlazorSpecialProjectFinal.Components
-@inject IInventoryDbManagement InventoryDbManagement
-
-@*
+﻿
 @using Microsoft.AspNetCore.Components.QuickGrid
 @using Microsoft.EntityFrameworkCore
 @using System.Security.Claims
 @implements IAsyncDisposable
 @inject IDbContextFactory<InventoryContext> DbFactory
-    *@
 
-<<<<<<< HEAD
-@*<QuickGrid Items="context.Sweets" Pagination="pagination" Theme="corporate">
-    <PropertyColumn Property="@(s => s.SweetId)" Sortable ="true" Title ="ID"/>
-    <PropertyColumn Property="@(s => s.Name)" Sortable ="true" />
-    <PropertyColumn Property="@(s => s.Description)" Sortable="true" />
-    <PropertyColumn Property="@(s => s.Quantity)" Sortable="true"/>
-    <PropertyColumn Property="@(s => s.Price)" Sortable ="true" />
-=======
 <QuickGrid Items="context.Sweets" class="table table-striped">
     @if (role)
     {
@@ -47,41 +34,20 @@
     <PropertyColumn Property="@(s => s.Quantity)" Sortable ="true" />
     <PropertyColumn Property="@(s => s.Price)" Sortable="true" />
 
-
->>>>>>> QuickGrid
 </QuickGrid>
 
 <Paginator State="pagination" />
-*@
 
-        @foreach(var sweet in sweets)
-        {
-        <tr>
-            <td>@sweet.SweetId</td>
-            <td>@sweet.Name</td>
-            <td>@sweet.Description</td>
-            <td>@sweet.Quantity</td>
-            <td>@sweet.Price</td>
-        </tr>
-        }
 
 @code {
-    private List<Sweet>? sweets;
 
     ClaimsPrincipal User = new ClaimsPrincipal();
 
     [Parameter]
     public bool role { get; set; }
 
-    protected override void OnInitialized()
-    {
-        base.OnInitialized();
-        sweets = InventoryDbManagement.GetSweets();
-
-    }
-
-    /*private InventoryContext context = default!;
-
+    private InventoryContext context = default!;
+     
     protected override void OnInitialized()
         {
         context = DbFactory.CreateDbContext();
@@ -105,5 +71,5 @@
     public async ValueTask DisposeAsync() => await context.DisposeAsync();
 
     PaginationState pagination = new PaginationState { ItemsPerPage = 10 };
-    */
+    
 }
