--- a/Code/BlazorSpecialProjectFinal/Components/Controls/ProductsComponent.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Controls/ProductsComponent.razor
@@ -5,13 +5,14 @@
 @using System.Security.Claims
 @implements IAsyncDisposable
 @inject IDbContextFactory<InventoryContext> DbFactory
+@inject IInventoryDbManagement InventoryDbManagement
 
-<QuickGrid Items="context.Sweets" class="table table-striped">
+<QuickGrid Items="context.Sweets" class="table table-striped" >
     @if (role)
-    {
+    {    
     <TemplateColumn Title="Purchase">
             <div>
-                <a href="/purchaseProduct">Purchase</a>
+                <a href="/purchaseProduct/@context.SweetId">Purchase</a>
             </div>
         </TemplateColumn>
     }
@@ -19,14 +20,19 @@
     {
         <TemplateColumn Title="Edit">
             <div>
-                <a href="/purchaseProduct">Edit</a>
+                <a href="/editProduct/@context.SweetId">Edit</a>
             </div>
     </TemplateColumn>
     <TemplateColumn Title="Delete">
-
-            <div>
-                <a href="/purchaseProduct">Delete</a>
-            </div>
+                @*<EditForm Model="Sweet"
+            FormName = "@($"sweet-{Sweet.SweetId}")"
+            OnValidSubmit="@(()=>{DeleteProduct(Sweet.SweetId);})">
+        <button type="submit" class="btn btn-primary">Delete</button>
+    </EditForm>*@
+    <form @onsubmit="@(()=>{DeleteProduct(context.SweetId);})">
+        <button type="submit" class="btn btn-primary">Delete</button>
+    </form>
+           
     </TemplateColumn>
     }
     <PropertyColumn Property="@(s => s.SweetId)" Sortable ="true" Title = "ID"/>
@@ -51,9 +57,9 @@
     public Sweet? Sweet { get; set; }
 
     private InventoryContext context = default!;
-     
+
     protected override void OnInitialized()
-        {
+    {
         context = DbFactory.CreateDbContext();
 
     }
@@ -75,5 +81,12 @@
     public async ValueTask DisposeAsync() => await context.DisposeAsync();
 
     PaginationState pagination = new PaginationState { ItemsPerPage = 10 };
-    
+
+    private void DeleteProduct(int Id)
+    {
+        if(Id > 0)
+        {
+            InventoryDbManagement.DeleteProduct(Id);   
+        }
+    }
 }
