--- a/Code/BlazorSpecialProjectFinal/Components/Pages/ViewProducts.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Pages/ViewProducts.razor
@@ -9,13 +9,10 @@
 <ProductsComponent role="false"></ProductsComponent>
 
 @*add a button to add new product*@
-<button class="btn btn-primary" type="button" onclick="AddProduct">Add Product</button>
+<a href="/addProduct" class="btn btn-primary">Add Product</a>
 
 
 
 @code {
-    private void AddProduct()
-    {
-        NavigationManager.NavigateTo("/addProduct");
-    }
+
 }
