Add code for submit of edit and add
When a new product is added or an existing product is edited save it to the database.

--- a/Code/BlazorSpecialProjectFinal/Components/Pages/EditProduct.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Pages/EditProduct.razor
@@ -66,6 +66,17 @@ else
 
     public void Submit()
     {
-        
+        if (sweet != null)
+        {
+            @if (this.Id.HasValue)
+            {
+                InventoryDbManagement.UpdateProduct(sweet.SweetId, sweet);
+            }
+            else
+            {
+                InventoryDbManagement.AddProduct(sweet);
+            }
+        }
+        NavigationManager.NavigateTo("/viewProducts");
     }
 }
