--- a/Code/BlazorSpecialProjectFinal/Components/Pages/EditProduct.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Pages/EditProduct.razor
@@ -31,12 +31,19 @@ else
     
     <label for="name">Name</label>
     <InputText @bind-Value="sweet.Name" class="form-control"></InputText>
+    <ValidationMessage For="@(() => sweet.Name)"></ValidationMessage>
+
     <label for="description">Description</label>
     <InputText @bind-Value="sweet.Description" class="form-control"></InputText>
+    <ValidationMessage For="@(() => sweet.Description)"></ValidationMessage>
+
     <label for="quantity">Quantity</label>
     <InputNumber @bind-Value="sweet.Quantity" class="form-control"></InputNumber>
+    <ValidationMessage For="@(() => sweet.Quantity)"></ValidationMessage>
+
     <label for="price">Price</label>
     <InputNumber @bind-Value="sweet.Price" class="form-control"></InputNumber>
+    <ValidationMessage For="@(() => sweet.Price)"></ValidationMessage>
 </EditForm>
 
 @*buttons to update*@
