--- a/Code/BlazorSpecialProjectFinal/Components/Pages/OrderProducts.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Pages/OrderProducts.razor
@@ -1,12 +1,12 @@
 ﻿@page "/orderProducts"
+@using BlazorSpecialProjectFinal.Objects
 @using Microsoft.AspNetCore.Authorization
 
 @attribute [Authorize(Policy = "Regular")]
 
 <h3>Order Products</h3>
 
-<ProductsComponent role="true"></ProductsComponent>
-
+    <ProductsComponent role="true"></ProductsComponent>
 
 
 @code {
