Add code for tracking cart and checkout
Code is in place, but further troubleshooting is needed for the cart.  No code exists for the checkout button.

--- a/Code/BlazorSpecialProjectFinal/Components/Controls/ProductsComponent.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Controls/ProductsComponent.razor
@@ -6,6 +6,7 @@
 @implements IAsyncDisposable
 @inject IDbContextFactory<InventoryContext> DbFactory
 @inject IInventoryDbManagement InventoryDbManagement
+@inject QtPurchase Cart
 
 <QuickGrid Items="context.Sweets" class="table table-striped" Pagination="pagination">
     @if (role)
