Add code to show checkout page
Checkout page currently showing all items from checkout table.  Need to alter the HistoryID field to record same ID per cart checkout and then need to filter the checkout page results to show only items from that cart.

--- a/Code/BlazorSpecialProjectFinal/Components/Pages/PurchaseProduct.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Pages/PurchaseProduct.razor
@@ -113,19 +113,19 @@
                 userId = user.Id; // Here we get the UserId
             }
         }
-        
+
     }
 
     protected override async Task OnInitializedAsync()
     {
         /*var user = await GetCurrentUserAsync();
         if (user != null)
-        {
+            {
             userId = user.Id; // Here we get the UserId
         }
-        */
+    */
     }
-    
+
     private async Task<IdentityUser> GetCurrentUserAsync()
     {
         var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
@@ -139,9 +139,10 @@
 
         return null;
     }
-    
+
     private void CheckOut()
     {
         CheckoutHistoryDbManagement.AddHistory(Cart, userId);
+        NavigationManager.NavigateTo("/checkout");
     }
 }
