--- a/Code/BlazorSpecialProjectFinal/Components/_Imports.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/_Imports.razor
@@ -12,3 +12,5 @@
 @using BlazorSpecialProjectFinal.Components.Pages
 @using BlazorSpecialProjectFinal.Data
 @using BlazorSpecialProjectFinal.Components.Controls
+@using Microsoft.AspNetCore.Components.QuickGrid
+
