Squashed commit of the following:
commit 42ef291b2db26fd57b6ea72e3be23a2ae311da18
Author: Joseph Plaizier <161767237+joseph-plaizier@users.noreply.github.com>
Date:   Fri Sep 27 01:17:10 2024 -0600

    Add code to show checkout page

    Checkout page currently showing all items from checkout table.  Need to alter the HistoryID field to record same ID per cart checkout and then need to filter the checkout page results to show only items from that cart.

commit ee023d07ffdcaacac2dc389dc61ff16cd2e05f0d
Author: Joseph Plaizier <161767237+joseph-plaizier@users.noreply.github.com>
Date:   Thu Sep 26 21:28:28 2024 -0600

    Code to post Checkout data to database

commit d92884e12db110c4af921b13b9a622d2eead5591
Author: Joseph Plaizier <161767237+joseph-plaizier@users.noreply.github.com>
Date:   Thu Sep 26 16:39:31 2024 -0600

    Add CheckOutHistory table

    Add code to create the checkout history table.  Removed a corrupt bin and obj folder and rebuilt the solution to allow the Add-Migration command to run correctly.

commit 243941e93617900e20b18f083f1f782790a65c49
Author: Joseph Plaizier <161767237+joseph-plaizier@users.noreply.github.com>
Date:   Thu Sep 26 10:25:53 2024 -0600

    Fix in cart count code

commit 372c05c6b5c1950279615decbccf25c8fb48a442
Author: Joseph Plaizier <161767237+joseph-plaizier@users.noreply.github.com>
Date:   Thu Sep 26 08:52:03 2024 -0600

    Add code for tracking cart and checkout

    Code is in place, but further troubleshooting is needed for the cart.  No code exists for the checkout button.

commit 8c7918dff6b487f8b9da7f23ad3af0fb4be0a67f
Author: Joseph Plaizier <161767237+joseph-plaizier@users.noreply.github.com>
Date:   Thu Sep 26 02:04:28 2024 -0600

    Create Product Purchase page form

commit 897941de71e8924b2361efc7c9aa1d713a707f5f
Author: Joseph Plaizier <161767237+joseph-plaizier@users.noreply.github.com>
Date:   Thu Sep 26 00:42:52 2024 -0600

    Create delete page with radio buttons

commit a2b6a28f77ed4a6c8fe8ab35e65399

--- a/Code/BlazorSpecialProjectFinal/Components/Controls/ProductsComponent.razor
+++ b/Code/BlazorSpecialProjectFinal/Components/Controls/ProductsComponent.razor
@@ -6,6 +6,7 @@
 @implements IAsyncDisposable
 @inject IDbContextFactory<InventoryContext> DbFactory
 @inject IInventoryDbManagement InventoryDbManagement
+@inject QtPurchase Cart
 
 <QuickGrid Items="context.Sweets" class="table table-striped" Pagination="pagination">
     @if (role)
@@ -24,14 +25,6 @@
             </div>
     </TemplateColumn>
     <TemplateColumn Title="Delete">
-                @*<EditForm Model="Sweet"
-            FormName = "@($"sweet-{Sweet.SweetId}")"
-            OnValidSubmit="@(()=>{DeleteProduct(Sweet.SweetId);})">
-        <button type="submit" class="btn btn-primary">Delete</button>
-    </EditForm>
-    <form @onsubmit="@(()=>{DeleteProduct(context.SweetId);})">
-        <button type="submit" class="btn btn-primary">Delete</button>
-    </form>*@
     <a href="/deleteProduct/@context.SweetId">Delete</a>
            
     </TemplateColumn>
